<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_8sdp"
    android:layout_marginBottom="@dimen/_48sdp"
    android:scrollbars="none"
    tools:context=".activities.lr.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/_24sdp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backArrow"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_gravity="start"
            android:background="@drawable/ic_baseline_arrow_back_24"
            android:tint="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_28sdp"
            android:text="@string/sign_up_for_a_nnew_account"
            android:fontFamily="@font/tthoves_demibold"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            android:layout_gravity="start"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/we_just_need_some_more_information"
            android:fontFamily="@font/tthoves_demibold"
            android:textColor="@color/grey"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            android:layout_gravity="start"/>

        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_oval="true"/>

            <TextView
                android:id="@+id/textAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_image"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_10ssp"/>

        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputName"
            style="@style/LRTextFilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NAME"
            app:endIconMode="custom"
            app:endIconTint="@color/end_icon"
            app:errorIconDrawable="@drawable/wrong_icon"
            android:layout_marginTop="@dimen/_18sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editNameText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:textSize="@dimen/_13ssp"
                android:importantForAutofill="no"
                android:textColor="@color/primary_text"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmail"
            style="@style/LRTextFilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:endIconMode="custom"
            app:endIconTint="@color/end_icon"
            app:errorIconDrawable="@drawable/wrong_icon"
            android:layout_marginTop="@dimen/_18sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmailText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:textSize="@dimen/_13ssp"
                android:importantForAutofill="no"
                android:textColor="@color/primary_text"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            style="@style/LRTextFilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="custom"
            app:endIconTint="@color/end_icon"
            app:errorIconDrawable="@drawable/wrong_icon"
            android:layout_marginTop="@dimen/_18sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPasswordText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:textSize="@dimen/_13ssp"
                android:importantForAutofill="no"
                android:textColor="@color/primary_text"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputConfirmPassword"
            style="@style/LRTextFilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            app:endIconMode="custom"
            app:endIconTint="@color/end_icon"
            app:errorIconDrawable="@drawable/wrong_icon"
            android:layout_marginTop="@dimen/_18sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editConfirmPasswordText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:textSize="@dimen/_13ssp"
                android:importantForAutofill="no"
                android:textColor="@color/primary_text"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkBoxPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/show_password"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                style="@style/LRButton"
                android:id="@+id/buttonSignUp"
                android:background="@drawable/background_button_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </FrameLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>