<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.RulePasscodeFragment"
    tools:ignore="SpeakableTextPresentCheck"
    android:background="@color/light_grey">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/lightning_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/toolText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passcode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_bird"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.050"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/passcode_rule" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginLeft="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:fontFamily="@font/tthoves_demibold"
        android:padding="@dimen/_8sdp"
        android:text="Passcode"
        android:textAlignment="center"
        android:textColor="@color/greys"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="@+id/lottie_bird"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/lottie_bird"
        app:layout_constraintTop_toBottomOf="@+id/lottie_bird" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:fontFamily="@font/tthoves_demibold"
        android:padding="@dimen/_8sdp"
        android:text="@string/when_you_set_up_an_additional_passcode_a_lock_icon_will_appear_on_the_chats_page_tap_it_to_lock_and_unlock_the_app"
        android:textAlignment="center"
        android:textColor="@color/greys"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPasscode"
        style="@style/PasscodeButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginLeft="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:background="@drawable/background_button_passcode"
        android:text="@string/turn_passcode_on"
        android:textColor="@color/white"
        android:textSize="@dimen/_11ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:fontFamily="@font/tthoves_demibold"
        android:padding="@dimen/_8sdp"
        android:text="@string/note_if_you_forget_the_passcode_you_ll_need_to_contact_admin_to_get_back_passcode"
        android:textAlignment="center"
        android:textColor="@color/greys"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonPasscode"
        app:layout_constraintStart_toStartOf="@+id/buttonPasscode"
        app:layout_constraintTop_toBottomOf="@+id/buttonPasscode"
        app:layout_constraintVertical_bias="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>