<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:padding="@dimen/_8sdp"
    tools:context=".activities.ActivateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/_24sdp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/backArrow"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:background="@drawable/ic_baseline_arrow_back_24"
            android:layout_gravity="start"
            android:tint="@color/black" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_130sdp"
            android:layout_marginTop="@dimen/_30sdp"
            app:lottie_rawRes="@raw/activate"
            app:lottie_enableMergePathsForKitKatAndAbove="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/verify_your_email"
            android:fontFamily="@font/tthoves_demibold"
            android:textSize="@dimen/_20ssp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/we_sent_otp_code_to_your_email"
            android:fontFamily="@font/tthoves_demibold"
            android:textSize="@dimen/_10ssp"
            android:gravity="center"
            android:textColor="@color/grey"/>

        <TextView
            android:id="@+id/verifyInvalid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/the_verification_code_entered_was_invalid_or_expired"
            android:fontFamily="@font/tthoves_demibold"
            android:visibility="gone"
            android:textSize="@dimen/_10ssp"
            android:gravity="center"
            android:textColor="@color/error"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputCode1"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_45sdp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputCode2"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_45sdp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputCode3"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_45sdp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputCode4"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_45sdp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputCode5"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_45sdp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <TextView
            android:id="@+id/resendOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/tthoves_demibold"
            android:textSize="@dimen/_10ssp"
            android:gravity="center"
            android:textColor="@color/grey"/>

        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                style="@style/LRButton"
                android:id="@+id/buttonVerify"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="VERIFY"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </FrameLayout>


<!--        <TextView-->
<!--            android:id="@+id/emailText"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="@dimen/_14sdp"-->
<!--            android:fontFamily="@font/tthoves_demibold"-->
<!--            android:textSize="@dimen/_10ssp"-->
<!--            android:textColor="@color/grey"/>-->

    </LinearLayout>

</androidx.core.widget.NestedScrollView >